--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <H1>Selamat datang</H1>
+    <p>Hari ini belajar VCS Git dan Github, serta deploy ke vercel</p>
 </body>
 </html>
