--- a/index.html
+++ b/index.html
@@ -6,7 +6,131 @@
     <title>Belajar HTML</title>
 </head>
 <body>
-    <H1>Selamat datang</H1>
+    <H1>Selamat datang </H1>
     <p>Hari ini belajar VCS Git dan Github, serta deploy ke vercel</p>
+    <!-- ini komentar -->
+    <!-- komentar tidak ditampilkan pada browser -->
+
+    <!-- heading h1 sd h6 -->
+     <h1>Judul</h1>
+     <h2>Judul</h2>
+     <h3>Judul</h3>
+     <h4>Judul</h4>
+     <h5>Judul</h5>
+     <h6>Judul</h6>
+     
+     <!-- order list -->
+      <ol type="i">
+        <li>Ayam Bakar</li>
+        <li>Ayam Cabe Ijo</li>
+        <li>Bakso Telor</li>
+      </ol>
+
+      <!-- unorder list -->
+       <ul>
+        <li>Jus Alpukat</li>
+        <li>Jus Jeruk</li>
+        <li>Jus Mangga</li>
+       </ul>
+
+       <!-- Latihan -->
+        <OL type="1">
+            <li>FIKR</li>
+            <ol type="a">
+                <li>SI</li>
+                <li>IF</li>
+                <li>MI</li>
+                <li>TE</li>
+            </ol>
+            <li>FEB</li>
+            <ol type="a">
+                <li>MJ</li>
+                <li>AK</li>
+            </ol>
+        </OL>
+
+        <!-- tabel -->
+         <table border="1">
+            <!-- baris -->
+             <tr>
+                <!-- Kolom -->
+                 <td>NPM</td>
+                 <td>Nama</td>
+                 <td>Email</td>
+             </tr>
+             <tr>
+                <td>001</td>
+                <td>Ahmad</td>
+                <td>Ahmad@test.com</td>
+             </tr>
+             <tr>
+                <td>002</td>
+                <td>Yoga</td>
+                <td>Yoga@test.com</td>
+             </tr>
+
+             <!-- colspan (gabung kolom) -->
+             <table border="1">
+                <tr>
+                    <td colspan="2">Jenis kelamin</td>
+                </tr>
+                <tr>
+                    <td>Laki</td>
+                    <td>Perempuan</td>
+                </tr>
+             </table>
+
+             <!-- rowspn (gabung baris) -->
+              <table border="1">
+                <tr>
+                    <td rowspan="2">PAW 1</td>
+                    <td>13.30</td>
+                </tr>
+                <tr>
+                    <td>15.20</td>
+                </tr>
+              </table>
+         </table>
+
+         <!-- Latihan Table -->
+         <table border="1">
+            <tr>
+                <th rowspan="2">Nama Mahasiswa</th>
+                <th colspan="3" > Nilai</th>
+            </tr>
+            <tr>
+                <th>PAW 1</th>
+                <th>PAB 1</th>
+                <th>BD 1</th>
+            </tr>
+            <tr>
+                <td>Jessica</td>
+                <td >90</td>
+                <td >90</td>
+                <td >100</td>
+            </tr>
+            <tr>
+                <td>Nelson</td>
+                <td >80</td>
+                <td >90</td>
+                <td >90</td>
+            </tr>
+            <tr>
+                <td>Jovan</td>
+                <td >100</td>
+                <td >80</td>
+                <td >90</td>
+            </tr>
+         </table>
+
+         <!-- link -->
+          <a href="profil.html">profil</a>
+          <a href="hubungi.html" >Hubungi kami</a>
+          <a href="https://mdp.ac.id">kampus mdp</a>
+
+        <!-- link eksternal -->
+         <a href="https://mdp.ac.id" target="_blank">Kampus Mdp</a>
+
+
 </body>
 </html>
