--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Belajar HTML</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    <!-- inline CSS -->
+    <h1 style="color: blue; text-align: center;">Selamat Datang</h1>
     <H1>Selamat datang </H1>
     <p>Hari ini belajar VCS Git dan Github, serta deploy ke vercel</p>
     <!-- ini komentar -->
@@ -15,8 +18,8 @@
      <h1>Judul</h1>
      <h2>Judul</h2>
      <h3>Judul</h3>
-     <h4>Judul</h4>
-     <h5>Judul</h5>
+     <h4 class="bg-warning text-success">Judul</h4>
+     <h5 id="h5">Judul</h5>
      <h6>Judul</h6>
      
      <!-- order list -->
