--- a/profil.html
+++ b/profil.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Profil</h1>
+    <hr>
+        <a href="index.html">home</a> | <a href="hubungi.html">Hubungi kami</a>
+    </hr>
+    <img src="images/Kucing.png" alt="Kucing PNG" width="70%" class="rounded">
 </body>
 </html>
