--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -7,7 +7,29 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container text-center">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container">
+          <a class="navbar-brand" href="#">Bikini Bottom</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="info.html">Informasi</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="produk.html">Produk</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    <div class="container">
         <!-- carousel -->
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -30,55 +52,68 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-        <!-- img produk -->
-        <div class="row">
-            <div class="col-lg-3 col-sm-6">
-                <img src="image/patrick.png" alt="" class="img-fluid"> <h3>Produk 1</h3>
+          <h2 class="mt-3">Informasi</h2>
+          <table class="table table-striped">
+            <tr>
+                <th>Customer Service</th>
+                <th>Bagian</th>
+                <th>Whatapp</th>
+            </tr>
+            <tr>
+                <td>Customer Service 1</td>
+                <td>Apple</td>
+                <td><a href="https://wa.me/628123456789" class="btn btn-primary btn-sm">Tanya Saya</a></td>
+            </tr>
+            <tr>
+                <td>Customer Service 2</td>
+                <td>Lenovo</td>
+                <td><a href="https://wa.me/628123456789" class="btn btn-primary btn-sm">Tanya Saya</a></td>
+            </tr>
+          </table>
+
+          <div class="row">
+            <div class="col-lg-3">
+                <div class="card bg-primary">
+                    <img src="image/sponge.png" alt="">
+                    <div class="card-body text-white">
+                        <h5 class="card-title">Card Title</h5>
+                        <p class="card-text">Some Quick example text to build on the card title and make up the bulk of card content.</p>
+                        <a href="#" class="btn btn-warning">Go somewhere</a>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-3 col-sm-6">
-                <img src="image/plank.jfif" alt="" class="img-fluid"> <h3>Produk 2</h3>
+            <div class="col-lg-3">
+                <div class="card">
+                    <img src="image/sponge.png" alt="">
+                    <div class="card-body text-black">
+                        <h5 class="card-title">Card Title</h5>
+                        <p class="card-text">Some Quick example text to build on the card title and make up the bulk of card content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-3 col-sm-6">
-                <img src="image/sponge.png" alt="" class="img-fluid"> <h3>Produk 3</h3>
+            <div class="col-lg-3">
+                <div class="card">
+                    <img src="image/sponge.png" alt="">
+                    <div class="card-body text-black">
+                        <h5 class="card-title">Card Title</h5>
+                        <p class="card-text">Some Quick example text to build on the card title and make up the bulk of card content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-3 col-sm-6">
-                <img src="image/squid.jfif" alt="" class="img-fluid"> <h3>Produk 4</h3>
+            <div class="col-lg-3">
+                <div class="card">
+                    <img src="image/sponge.png" alt="">
+                    <div class="card-body text-black">
+                        <h5 class="card-title">Card Title</h5>
+                        <p class="card-text">Some Quick example text to build on the card title and make up the bulk of card content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
             </div>
-        </div>
-        <!-- Promosi produk -->
-        <div class="row">
-            <div class="col-lg-4 col-sm-12">
-                <img src="image/The_Krusty_Krab.png" alt="" class="img-fluid"> <h3>Promosi</h3>
-            </div>
-            <div class="col-lg-4 col-sm-12">
-                <img src="image/chum-bucket.avif" alt="" class="img-fluid"> <h3>Promosi</h3>
-            </div>
-            <div class="col-lg-4 col-sm-12">
-                <img src="image/Sandy21_002.webp" alt="" class="img-fluid"> <h3>Promosi</h3>
-            </div>
-        </div>
-        <!-- artikel dan hubungi kami -->
-         <div class="row">
-            <div class="col-lg-6 col-sm-12">
-                <h3>Artikel</h3>
-                <h5>Tips Memilih Restoran yang bagus di bikini bottom</h5>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia iusto reiciendis nam mollitia? Voluptatem, eos recusandae exercitationem deserunt cupiditate in maiores quis doloribus. Necessitatibus voluptates animi sequi voluptatum, sunt beatae!</p>
-                <h5>Tips Memilih Makanan yang enak di bikini bottom</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos ad sapiente sed quod sequi illum eveniet voluptates. Voluptates, eos. Porro, atque commodi! Similique architecto nobis pariatur tempore. Ipsa, praesentium inventore.</p>
-            </div>
-            <div class="col-lg-6 col-sm-12">
-                <h3>Hubungi Kami</h3>
-                <p>Jika Anda Membutuhkan Penawaran, Konsultasi Produk, atau proses Pengadaan, Hubungi tim kami segera</p>
-                <form action="" method="post"> 
-                    <input type="text" name="nama" id="nama" class="form-control" placeholder="Nama Lengkap">
-                    <input type="email" name="email" id="email" class="form-control mt-1" placeholder="Email">
-                    <input type="text" name="hp" id="hp" class="form-control mt-1" placeholder="Nomor HP">
-                    <input type="text" name="pesan" id="pesan" class="form-control mt-1" placeholder="Pesan">
-                    <button type="submit" class="btn btn-success mt-1">Kirim</button>
-                </form>
-            </div>
-         </div>
-     </div>
+          </div>
+    </div>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
